--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+click==7.1.2
 Flask==1.0.2
-numpy==1.16.2
-scikit-learn==0.20.3
-gunicorn
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+numpy==1.18.2
+scikit-learn==0.23.2
+scipy==1.5.3
+Werkzeug==1.0.1
+pandas
